@@ -107,6 +107,8 @@ class Many2One(WidgetInterface):
         return value
 
     def sig_activate(self, widget, event=None, key_press=False):
+        if not common.MODELACCESS[self.get_model()]['read']:
+            return
         if not self.focus_out or not self.field:
             return
         self.changed = False
@@ -173,6 +175,8 @@ class Many2One(WidgetInterface):
             views_preload=self.attrs.get('views', {}), readonly=self._readonly)
 
     def sig_new(self, *args):
+        if not common.MODELACCESS[self.get_model()]['create']:
+            return
         self.focus_out = False
         screen = self.get_screen()
 
@@ -186,6 +190,8 @@ class Many2One(WidgetInterface):
         WinForm(screen, callback, new=True)
 
     def sig_edit(self, widget):
+        if not common.MODELACCESS[self.get_model()]['read']:
+            return
         if not self.focus_out or not self.field:
             return
         self.changed = False
@@ -290,6 +296,15 @@ class Many2One(WidgetInterface):
     def display(self, record, field):
         self.changed = False
         super(Many2One, self).display(record, field)
+
+        model = self.get_model()
+        if model:
+            access = common.MODELACCESS[model]
+            if not access['create']:
+                self.but_new.set_sensitive(False)
+            if not access['read']:
+                self.but_open.set_sensitive(False)
+
         if not field:
             self.wid_text.set_text('')
             self.wid_text.set_position(0)
